[tool.poetry]
name = "string-reverse"
version = "0.1.0"
description = "Python code to reverse strings"
authors = ["Fedor khan <han.fedya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
